umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_as-3.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "As#c-3#n4"} :bonds [] :charge -3 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "As#c-3#n4"} :bonds [] :charge -3 :spin "#u0 #s1"}}}
